fix title span shadow on mobile

--- a/styles/styles.module.scss
+++ b/styles/styles.module.scss
@@ -40,6 +40,10 @@
 
   span {
     color: #ffabf5;
-    text-shadow: 0 0 10px black;
+    text-shadow: 0 0 2px black;
+
+    @media screen and (min-width: 980px) {
+      text-shadow: 0 0 10px black;
+    }
   }
 }
